# pcl_handson

./: .gitignore  README.md  docker-compose.yaml  replay_ply.sh
pcl_viewer/: CMakeLists.txt  visualize.cpp
plydata/: occupied_20250223_131747.ply  occupied_20250223_131748.ply  occupied_20250223_131749.ply  occupied_20250223_131750.ply  occupied_20250223_131751.ply  occupied_20250223_131752.ply  occupied_20250223_131753.ply  occupied_20250223_131754.ply  occupied_20250223_131755.ply  occupied_20250223_131756.ply  occupied_20250223_131757.ply  occupied_20250223_131758.ply  occupied_20250223_131759.ply  occupied_20250223_131800.ply  occupied_20250223_131801.ply  occupied_20250223_131802.ply  occupied_20250223_131803.ply  occupied_20250223_131804.ply  occupied_20250223_131805.ply  occupied_20250223_131806.ply  occupied_20250223_131807.ply  occupied_20250223_131808.ply  occupied_20250223_131809.ply  occupied_20250223_131810.ply  occupied_20250223_131811.ply  occupied_20250223_131812.ply  occupied_20250223_131813.ply  occupied_20250223_131814.ply  occupied_20250223_131815.ply  occupied_20250223_131816.ply  occupied_20250223_131817.ply  occupied_20250223_131818.ply  occupied_20250223_131819.ply  occupied_20250223_131820.ply  occupied_20250223_131821.ply  occupied_20250223_131822.ply  occupied_20250223_131823.ply  occupied_20250223_131824.ply  occupied_20250223_131825.ply  occupied_20250223_131826.ply  (+81 more)
sample_ply/: pointcloud1_000.ply  pointcloud1_001.ply  pointcloud1_002.ply  pointcloud1_003.ply  pointcloud1_004.ply  pointcloud1_005.ply  pointcloud1_006.ply  (+86 more)
(+59 files in other folders)
